--- a/index.html
+++ b/index.html
@@ -241,44 +241,50 @@
                                 class="relative px-4 !pr-7  backdrop-blur-[0.125rem] -skew-x-[16deg]  before:absolute before:inset-0 before:bg-gradient-to-l before:from-[#CB122D] before:via-[#CB122D] before:to-[#650916] before:-skew-x-[16deg] before:-z-10 before:lg:h-[4.688rem] before:h-[3.688rem] before:flex before:justify-center before:items-center before:top-auto">
                                 EXPRESS
                             </span>
-                            <br>car care across India.
+                            <span class="block">car care across India.</span>
                         </h1>
                         <h1
                             class="text-[2.625rem] mt-6 font-bold italic leading-[3.2rem] whitespace-nowrap text-white block md:hidden">
-                            Redefining <br>
+                            Redefining
                             <span
-                                class="relative px-4 !pr-7 mt-4 w-fit drop-shadow-[0_4px_8px_rgba(0,0,0,0.6)]  bg-gradient-to-l from-[#CB122D] via-[#CB122D] to-[#650916] -skew-x-[16deg] -z-10 h-[4.688rem] flex justify-center items-center ">
+                                class="relative block px-4 !pr-7 mt-4 w-fit drop-shadow-[0_4px_8px_rgba(0,0,0,0.6)]  bg-gradient-to-l from-[#CB122D] via-[#CB122D] to-[#650916] -skew-x-[16deg] -z-10 h-[4.688rem] flex justify-center items-center ">
                                 <span class="skew-x-[16deg]"> EXPRESS</span>
                             </span>
-                            car care <br>across India.
+                            car care <span class="block">across India.</span>
                         </h1>
                     </div>
                     <div
-                        class="absolute md:flex hidden w-fit lg:py-5 py-3  px-8  bg-[linear-gradient(268.6deg,_#CB122D_0.16%,_#650916_100%)] top-auto bottom-[-7rem] left-0 origin-top -skew-x-[18deg]">
+                        class="absolute services_sec md:flex hidden w-fit lg:py-5 py-3  px-8  bg-[linear-gradient(268.6deg,_#CB122D_0.16%,_#650916_100%)] top-auto bottom-[-7rem] left-0 origin-top -skew-x-[18deg]">
                         <div class="view w-fit flex items-center justify-center skew-x-[18deg] pr-0">
-
                             <div class="flex flex-col lg:flex-row items-center gap-2 mx-3">
                                 <img src="img/Isolation_Mode-1.webp" alt="Honest Pricing" title="Honest Pricing"
                                     class="size-8" loading="lazy" fetchpriority="low">
-                                <p class="text-base text-white font-bold font-inter">Honest <br>Pricing</p>
+                                <div class="text-base text-white font-bold font-inter leading-tight">Honest <span
+                                        class="block">Pricing</span></div>
                             </div>
 
                             <div class="flex flex-col lg:flex-row items-center gap-2 mx-3">
                                 <img src="img/genuine-part.webp" alt="Genuine_Icon" title="Genuine_Icon" class="size-8"
                                     loading="lazy" fetchpriority="low">
-                                <p class="text-base text-white font-bold font-inter">Genuine <br>Parts</p>
+                                <div class="text-base text-white font-bold font-inter leading-tight">Genuine <span
+                                        class="block">Parts</span>
+                                </div>
                             </div>
 
                             <div class="flex flex-col lg:flex-row items-center gap-2 mx-3">
                                 <img src="img/technician.webp" alt="Certified Technicians" title="Certified Technicians"
                                     class="size-8" loading="lazy" fetchpriority="low">
-                                <p class="text-base text-white font-bold font-inter">Certified <br>Technicians</p>
+                                <p class="text-base text-white font-bold font-inter leading-tight">Certified <span
+                                        class="block">Technicians</span>
+                                </p>
                             </div>
 
                             <div class="flex flex-col lg:flex-row items-center gap-2 mx-3">
                                 <img src="img/coverage.webp" alt="Warranty Coverage" alt="Warranty Coverage"
                                     class="size-8" loading="lazy" fetchpriority="low">
-                                <p class="text-base text-white font-bold font-inter">Warranty <br>Coverage</p>
+                                <p class="text-base text-white font-bold font-inter leading-tight">Warranty
+                                    <span class="block">Coverage</span>
+                                </p>
                             </div>
 
                         </div>
@@ -289,25 +295,30 @@
                             <div class="flex items-start gap-2 me-3">
                                 <img src="img/Isolation_Mode-1.webp" alt="Honest Pricing" title="Honest Pricing"
                                     class="size-8" loading="lazy" fetchpriority="low">
-                                <p class="text-base text-sm text-white font-bold font-inter">Honest <br>Pricing</p>
+                                <p class="text-base text-sm text-white font-bold font-inter">Honest <span
+                                        class="block">Pricing</span></p>
                             </div>
 
                             <div class="flex items-start gap-2 me-3">
                                 <img src="img/genuine-part.webp" alt="Genuine Parts" title="Genuine Parts"
                                     class="size-8" loading="lazy" fetchpriority="low">
-                                <p class="text-base text-white font-bold font-inter">Genuine <br>Parts</p>
+                                <p class="text-base text-white font-bold font-inter">Genuine <span
+                                        class="block">Parts</span>
+                                </p>
                             </div>
 
                             <div class="flex items-start gap-2 me-3">
                                 <img src="img/technician.webp" alt="Certified Technicians" title="Certified Technicians"
                                     class="size-8" loading="lazy" fetchpriority="low">
-                                <p class="text-base text-white font-bold font-inter">Certified <br>Technicians</p>
+                                <p class="text-base text-white font-bold font-inter">Certified <span
+                                        class="block">Technicians</span></p>
                             </div>
 
                             <div class="flex items-start gap-2">
                                 <img src="img/coverage.webp" alt="Warranty Coverage" title="Warranty Coverage"
                                     class="size-8" loading="lazy" fetchpriority="low">
-                                <p class="text-base text-white font-bold font-inter">Warranty <br>Coverage</p>
+                                <p class="text-base text-white font-bold font-inter">Warranty <span
+                                        class="block">Coverage</span></p>
                             </div>
                         </div>
                     </div>
@@ -415,37 +426,38 @@
                 </h2>
             </div>
         </div>
-        <div class="w-fit relative py-2 z-30 before:content-[''] before:absolute before:w-full before:h-full before:top-0
-            before:bg-gradient-to-r before:from-[#000000] before:to-[#000000] before:-left-4 before:-skew-x-[18deg]">
-            <nav id="tabs-nav" class="view flex items-center relative flex-nowrap gap-3 w-max min-w-full z-10 !pr-5"
+        <div
+            class="w-fit relative py-2 z-30 before:absolute before:w-full flex justify-center items-center before:top-auto
+            before:bg-gradient-to-r before:h-16 before:from-[#000000] before:to-[#000000] before:left-0 before:origin-top before:-skew-x-[18deg]">
+            <nav id="tabs-nav" class="view flex items-center relative flex-nowrap gap-3 w-fit min-w-full z-10 !pr-5"
                 style="scrollbar-width:none;">
                 <button data-tab="1"
-                    class="tab-btn active relative lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold bg-gradient-to-l from-[#CB122D] via-[#650916] to-[#CB122D] text-white -skew-x-[18deg]">
-                    <span class="skew-x-[18deg] block lg:text-lg text-base">Car Service</span>
+                    class="tab-btn active relative lg:px-4 py-5 px-3 -my-5 lg:font-bold font-semibold bg-gradient-to-l h-20 from-[#CB122D] via-[#9b2133] to-[#CB122D] text-white -skew-x-[18deg]">
+                    <span class="skew-x-[18deg] block text-lg">Car Service</span>
                 </button>
                 <button data-tab="2"
-                    class="tab-btn lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold lg:text-lg text-base text-white">
-                    <span class="block lg:text-lg text-base">Battery Service</span>
+                    class="tab-btn md:px-4 py-5 -my-5 lg:font-bold font-semibold text-lg text-white h-20">
+                    <span class="block text-lg">Battery Service</span>
                 </button>
                 <button data-tab="3"
-                    class="tab-btn lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold lg:text-lg text-base text-white">Tyre
+                    class="tab-btn md:px-4 py-5 -my-5 lg:font-bold font-semibold text-lg text-white h-20">Tyre
                     Care
                 </button>
                 <button data-tab="4"
-                    class="tab-btn lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold lg:text-lg text-base text-white">AC
+                    class="tab-btn md:px-4 py-5 -my-5 lg:font-bold font-semibold text-lg text-white h-20">AC
                     Service</button>
                 <button data-tab="5"
-                    class="tab-btn lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold lg:text-lg text-base text-white">Eco
+                    class="tab-btn md:px-4 py-5 -my-5 lg:font-bold font-semibold text-lg text-white h-20">Eco
                     Car
                     Wash</button>
                 <button data-tab="6"
-                    class="tab-btn lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold lg:text-lg text-base text-white">Headlight
+                    class="tab-btn md:px-4 py-5 -my-5 lg:font-bold font-semibold text-lg text-white h-20">Headlight
                     Polish</button>
                 <button data-tab="7"
-                    class="tab-btn lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold lg:text-lg text-base text-white">Body
+                    class="tab-btn md:px-4 py-5 -my-5 lg:font-bold font-semibold text-lg text-white h-20">Body
                     Shop</button>
                 <button data-tab="8"
-                    class="tab-btn lg:px-4 lg:py-5 px-3 py-3 -my-5 lg:font-bold font-semibold lg:text-lg text-base text-white">Engine
+                    class="tab-btn md:px-4 py-5 -my-5 lg:font-bold font-semibold text-lg text-white h-20">Engine
                     Care</button>
             </nav>
         </div>
@@ -2007,7 +2019,9 @@
                     <div class="flex flex-col gap-y-7 relative z-30">
                         <h2
                             class="text-[1.75rem] md:text-3xl lg:text-4xl 2xl:text-[3.125rem] 2xl:!leading-[3.313rem] !leading-12 font-bold whitespace-nowrap text-black">
-                            All things car.<br> One tap away.
+                            All things car. <span class="block">
+                                One tap away.
+                            </span>
                         </h2>
                         <ul class="space-y-3">
                             <li class="flex items-center gap-x-3">
@@ -2603,7 +2617,7 @@
 
             <div class="p-5">
                 <h2 class="mb-5 font-inter md:text-2xl lg:text-3xl  !leading-12 font-bold text-white">
-                    Expert car care at <br> express speed.
+                    Expert car care at <span class="block">express speed.</span>
                 </h2>
 
                 <div class="flex flex-col gap-y-5">
@@ -2801,7 +2815,7 @@
                                         <div class="lg:text-xl text-base flex flex-col gap-y-1">
                                             <span class="block md:font-bold font-semibold">8 AM to 8 PM </span>
                                             <span class="block md:font-bold font-semibold">Monday to Saturday</span>
-                                            <span class="block">Open: 3rd & 4th Sunday<br></span>
+                                            <span class="block">Open: 3rd & 4th Sunday</span>
                                             <span class="block">Closed: 1st & 2nd Sunday</span>
                                         </div>
                                     </div>
@@ -2832,8 +2846,8 @@
                     <div class="block md:hidden lg:pl-[5rem] md:pl-[4rem] pl-[1rem]">
                         <h3 class="font-semibold lg:mt-12 md:mt-6 mt-2 mb-1">Head Office</h3>
                         <p class="text-sm">
-                            Sai Brindhavan, Plot No. 40C, Door 1, 3rd Main Road<br>
-                            Kottur Gardens, Kotturpuram, Chennai, Tamil Nadu - 600085
+                            Sai Brindhavan, Plot No. 40C, Door 1, 3rd Main Road
+                            <span class="block">Kottur Gardens, Kotturpuram, Chennai, Tamil Nadu - 600085</span>
                         </p>
                     </div>
                 </div>
@@ -2908,8 +2922,8 @@
                     <div class="md:block hidden">
                         <h3 class="font-semibold  mb-1">Head Office</h3>
                         <p class="text-sm">
-                            Sai Brindhavan, Plot No. 40C, Door 1, 3rd Main Road<br>
-                            Kottur Gardens, Kotturpuram, Chennai, Tamil Nadu - 600085
+                            Sai Brindhavan, Plot No. 40C, Door 1, 3rd Main Road
+                            <span class="block">Kottur Gardens, Kotturpuram, Chennai, Tamil Nadu - 600085</span>
                         </p>
                     </div>
                     <div class="flex md:flex-row flex-col md:items-center items-start mt-10 lg:gap-8 gap-4">
@@ -3034,7 +3048,7 @@
             function resetTabs(clicked) {
                 tabLinks.forEach(tab => {
                     if (tab !== clicked) { // don’t reset the one that was clicked
-                        tab.className = "tab-btn px-3 py-5 -my-5 font-bold text-white";
+                        tab.className = "tab-btn px-4 py-5 -my-5 h-20 text-lg font-bold text-white";
                         tab.innerHTML = tab.innerText;
                     }
                 });
@@ -3054,9 +3068,9 @@
 
                 // Apply active styles to clicked
                 clicked.className =
-                    "tab-btn active relative z-10 px-3 py-5 -my-5 font-bold bg-gradient-to-l from-[#CB122D] via-[#650916] to-[#CB122D] text-white -skew-x-[18deg]";
+                    "tab-btn active relative z-10 px-4 py-5 h-20 text-lg -my-5 font-bold bg-gradient-to-l from-[#CB122D] via-[#9b2133] to-[#CB122D] text-white -skew-x-[18deg]";
                 clicked.innerHTML =
-                    `<span class="skew-x-[18deg] block whitespace-nowrap">${clicked.innerText}</span>`;
+                    `<span class="skew-x-[18deg] block ">${clicked.innerText}</span>`;
 
                 // Show correct content
                 document.querySelector(`.content-item[data-content="${target}"]`).classList.remove(
@@ -3605,9 +3619,9 @@
             function resetTabs() {
                 tabLinks.forEach(tab => {
                     tab.className =
-                        "m-tab px-3 py-5 -my-5 lg:font-bold font-semibold text-base text-white";
+                        "m-tab px-3 py-5 lg:text-lg text-base -my-5 lg:font-bold font-semibold  text-white";
                     tab.innerHTML =
-                        `<span class="block text-base whitespace-nowrap lg:whitespace-wrap">${tab.innerText}</span>`;
+                        `<span class="block lg:text-lg text-base whitespace-nowrap lg:whitespace-wrap">${tab.innerText}</span>`;
                 });
             }
 
@@ -3620,9 +3634,9 @@
 
                     // Apply active styles to clicked tab
                     this.className =
-                        "m-tab active relative px-3 py-5 -my-5 lg:font-bold font-semibold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white -skew-x-[12deg]";
+                        "m-tab active relative lg:text-lg text-base px-3 py-5 -my-5 lg:font-bold font-semibold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white -skew-x-[12deg]";
                     this.innerHTML =
-                        `<span class="skew-x-[12deg] block whitespace-nowrap">${this.innerText}</span>`;
+                        `<span class="skew-x-[12deg] block whitespace-nowrap lg:text-lg text-base">${this.innerText}</span>`;
 
                     // Hide all contents
                     tabContents.forEach(c => c.classList.add("hidden"));
