--- a/blog-item.html
+++ b/blog-item.html
@@ -17,8 +17,8 @@
 
 <body class="!font-inter">
     <section class="py-8">
-        <div class="view">
-            <div class="flex flex-col md:gap-y-8 gap-y-[1.438rem]">
+        <div class="view flex md:flex-row flex-col gap-[2.688rem] md:gap-24 ">
+            <div class="flex md:w-2/3 flex-col md:gap-y-8 gap-y-[1.438rem]">
                 <div class="flex flex-col gap-[1.438rem] md:pb-0 ">
                     <a href="#" class="flex gap-1.5 md:hidden block text-sm font-medium item-center">
                         <div class="w-5 h-4">
@@ -102,10 +102,17 @@
                     </p>
                 </div>
                 <div class="w-full">
-                    <div class="grid md:grid-cols-2 gap-[1.438rem] md:gap-8 items-center">
-                        <div class="relative overflow-hidden rounded-xl">
-                            <img src="img/blog_men.webp" alt="blog img" title="blog img"
-                                class="w-full  h-full object-cover object-top h-[18.75rem] md:h-[30rem]">
+
+
+                    <div class="grid md:grid-cols-1 gap-[1.438rem]  md:gap-8 items-center">
+                        <div class="flex flex-col gap-8 ">
+                            <div class="relative overflow-hidden rounded-xl">
+                                <img src="img/blog_men.webp" alt="blog img" title="blog img"
+                                    class="w-full  h-full object-cover object-top h-[18.75rem] md:h-[30rem]">
+                            </div>
+                            <div class="text-[#3B3C4A] text-xl font-normal text-center items-center justify-center">
+                                Image Name/Info
+                            </div>
                         </div>
                         <div class="md:space-y-8 space-y-[0.938rem]">
                             <p
@@ -133,18 +140,12 @@
                                 malesuada lacinia integer nunc posuere.
 
                             </p>
-                            <p
-                                class="text-[#3B3C4A] font-normal md:block hidden lg:text-xl md:text-lg text-base text-sm leading-6 md:leading-8">
-                                Iaculis massa nisl malesuada lacinia integer nunc posuere. Iaculis massa nisl malesuada
-                                lacinia
-                                integer nunc posuere.
 
-                            </p>
                         </div>
                     </div>
                 </div>
                 <div
-                    class="bg-[#E8E8EA] w-full md:w-4/5 h-[7.5rem] flex flex-col mx-auto items-center gap-1 text-center justify-center">
+                    class="bg-[#E8E8EA] md:hidden block w-full md:w-4/5 h-[7.5rem] flex flex-col mx-auto items-center gap-1 text-center justify-center">
                     <p class="text-[#696A75] text-sm font-normal ">Advertisement</p>
                     <p class="text-[#696A75] md:text-xl text-lg font-semibold ">You can place ads</p>
                     <p class="text-[#696A75] md:text-lg text-sm font-normal ">980x120</p>
@@ -162,7 +163,7 @@
                             you get top-tier service from experienced professionals. Here’s what sets us apart:
                         </p>
                     </div>
-                    <div class="grid md:grid-cols-2 gap-[1.438rem] md:gap-8 items-center">
+                    <div class="grid md:grid-cols-2 md:hidden block gap-[1.438rem] md:gap-8 items-center">
                         <div class="md:order-2 order-1 overflow-hidden rounded-xl">
                             <img src="img/blog_men.webp" alt="menimg" class="w-full md:h-[30rem] h-full object-cover">
                         </div>
@@ -214,7 +215,7 @@
                         </p>
                     </div>
                     <div
-                        class="bg-[#E8E8EA] h-[7.5rem] flex flex-col mx-auto items-center gap-1 text-center justify-center">
+                        class="bg-[#E8E8EA] md:hidden block h-[7.5rem] flex flex-col mx-auto items-center gap-1 text-center justify-center">
                         <p class="text-[#696A75] md:text-xl text-lg font-semibold  ">You can place Banners</p>
                         <p class="text-[#696A75] md:text-lg text-base font-normal ">1512x120</p>
                     </div>
@@ -253,7 +254,133 @@
                     </div>
                 </div>
             </div>
-        </div>
+
+            <div class="md:w-1/3 w-full">
+                <div class="flex flex-col gap-y-8 sticky top-8">
+                    <div class="w-full flex flex-col gap-y-4">
+                        <div class="w-full relative">
+                            <h2 class=" md:text-3xl md:block hidden text-[1.75rem] text-black font-semibold">
+                                Check This Out
+                            </h2>
+                            <h2 class=" md:text-3xl md:hidden block text-[1.75rem] text-black font-semibold">
+                                It’s best you know these
+                            </h2>
+                            <div
+                                class="relative pt-3 after:absolute after:bg-gradient-to-l from-[#CB122D] via-[#CB122D] to-[#650916] after:w-[7.438rem] md:after:h-2.5 after:h-[0.688rem] after:-skew-x-[18deg] after:left-0">
+                            </div>
+                        </div>
+
+                        <div class="flex flex-col pt-9 md:pt-3 gap-6 md:gap-4">
+                            <div class="flex gap-4">
+                                <div class="w-[6.188rem] shrink-0 h-[6.188rem]">
+                                    <img src="img/checkThis2.webp" alt="check this img"
+                                        class="w-full h-full object-cover md:object-contain">
+                                </div>
+                                <div class="flex flex-col justify-between">
+                                    <span class="md:text-lg text-base text-balance font-semibold text-[#181A2A]">5 Signs
+                                        Your Car Needs Immediate Service</span>
+
+                                    <div class="flex flex-row items-center gap-1.5 text-[#637083] text-sm font-normal">
+                                        August 18, 2025 . 3 Min Read
+                                        <span>
+                                            <svg width="16" height="16" class="size-4 shrink-0" viewBox="0 0 16 16"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M4.66406 4.66479H11.3281V11.3288" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                                <path d="M4.66406 11.3288L11.3281 4.66479" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                            </svg>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex gap-4">
+                                <div class="w-[6.188rem] shrink-0 h-[6.188rem]">
+                                    <img src="img/checkThis1.webp" alt="check this img"
+                                        class="w-full h-full object-cover md:object-contain">
+                                </div>
+                                <div class="flex flex-col justify-between">
+                                    <span
+                                        class="md:text-lg text-base text-balance font-semibold text-[#181A2A]">Understanding
+                                        Your Vehicle's Engine Health</span>
+
+                                    <div
+                                        class="flex flex-row items-center gap-1.5 text-[#637083] text-xs md:text-sm font-normal">
+                                        August 18, 2025 . 3 Min Read
+                                        <span>
+                                            <svg width="16" height="16" class="size-4 shrink-0" viewBox="0 0 16 16"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M4.66406 4.66479H11.3281V11.3288" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                                <path d="M4.66406 11.3288L11.3281 4.66479" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                            </svg>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex gap-4">
+                                <div class="w-[6.188rem] shrink-0 h-[6.188rem]">
+                                    <img src="img/checkThis3.webp" alt="check this img"
+                                        class="w-full h-full object-cover md:object-contain">
+                                </div>
+                                <div class="flex flex-col justify-between">
+                                    <span
+                                        class="md:text-lg text-base text-balance font-semibold text-[#181A2A]">Preventive
+                                        Maintenance: Save Money in the Long Run</span>
+
+                                    <div
+                                        class="flex flex-row items-center gap-1.5 text-[#637083] text-xs md:text-sm font-normal">
+                                        August 18, 2025 . 3 Min Read
+                                        <span>
+                                            <svg width="16" height="16" class="size-4 shrink-0" viewBox="0 0 16 16"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M4.66406 4.66479H11.3281V11.3288" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                                <path d="M4.66406 11.3288L11.3281 4.66479" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                            </svg>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex gap-4">
+                                <div class="w-[6.188rem] shrink-0 h-[6.188rem]">
+                                    <img src="img/checkThis4.webp" alt="check this img"
+                                        class="w-full h-full object-cover md:object-contain">
+                                </div>
+                                <div class="flex flex-col justify-between">
+                                    <span class="md:text-lg text-base font-semibold text-balance text-[#181A2A]">Genuine
+                                        Parts vs Aftermarket: What You Need to Know</span>
+
+                                    <div
+                                        class="flex flex-row items-center gap-1.5 text-[#637083] text-xs md:text-sm font-normal">
+                                        August 18, 2025 . 3 Min Read
+                                        <span>
+                                            <svg width="16" height="16" class="size-4 shrink-0" viewBox="0 0 16 16"
+                                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M4.66406 4.66479H11.3281V11.3288" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                                <path d="M4.66406 11.3288L11.3281 4.66479" stroke="#CB122D"
+                                                    stroke-width="1.33281" stroke-linecap="round"
+                                                    stroke-linejoin="round" />
+                                            </svg>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
