--- a/car-services.html
+++ b/car-services.html
@@ -18,7 +18,7 @@
 
 <body class="!font-inter">
 
-    <div class="heroSection w-full relative z-0 h-dvh ">
+    <div class="heroSection w-full relative z-0 md:min-h-dvh h-dvh md:!h-auto">
         <div class="relative w-full h-full overflow-hidden">
             <img fetchpriority="high" loading="eager" decoding="async" src="img/car_services.webp"
                 class="size-full object-cover aspect-[1279/342]" width="1279" height="342"
