--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="!font-inter">
-    <section class="hero_section w-full relative h-dvh z-10">
+    <section class="hero_section w-full relative md:min-h-dvh h-dvh md:!h-auto z-10">
         <div class="relative w-full h-full overflow-hidden">
             <div class="swiper blogHeroSlider relative">
                 <div class="swiper-wrapper">
